page overflow fix

--- a/src/pages/components/Introduction/Introduction.css
+++ b/src/pages/components/Introduction/Introduction.css
@@ -29,7 +29,7 @@
 .intro-text-wrapper{
     margin-left: 2rem;
     margin-right: 2rem;
-    width: 40rem;
+    width: 40vw;
     text-align: center;
 }
 
